force-app/main/default/objects/SalesforceAsset__x/SalesforceAsset__x.object-meta.xml
<CustomObject>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SalesforceAsset</externalName>
    <label>Asset Salesforce</label>
    <pluralLabel>Assets Salesforce</pluralLabel>
</CustomObject>