force-app/main/default/objects/SalesforceAsset__x/fields/AccountIdOnline__c.field-meta.xml
<CustomField>
    <fullName>AccountIdOnline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente Online</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets Salesforce</relationshipLabel>
    <relationshipName>AssetsSalesforce</relationshipName>
    <type>Lookup</type>
</CustomField>