force-app/main/default/objects/SalesforceAsset__x/fields/AgencyC__c.field-meta.xml
<CustomField>
    <fullName>AgencyC__c</fullName>
    <description>AgencyC</description>
    <externalDeveloperName>AgencyC</externalDeveloperName>
    <label>AgencyC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>