force-app/main/default/objects/SalesforceAsset__x/fields/ConsumptionAnnualVASC__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionAnnualVASC__c</fullName>
    <description>ConsumptionAnnualVASC</description>
    <externalDeveloperName>ConsumptionAnnualVASC</externalDeveloperName>
    <label>ConsumptionAnnualVASC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>