force-app/main/default/objects/SalesforceAsset__x/fields/CorrHCScheduleC__c.field-meta.xml
<CustomField>
    <fullName>CorrHCScheduleC__c</fullName>
    <description>CorrHCScheduleC</description>
    <externalDeveloperName>CorrHCScheduleC</externalDeveloperName>
    <label>CorrHCScheduleC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>