force-app/main/default/objects/SalesforceAsset__x/fields/DurationDayGasC__c.field-meta.xml
<CustomField>
    <fullName>DurationDayGasC__c</fullName>
    <description>DurationDayGasC</description>
    <externalDeveloperName>DurationDayGasC</externalDeveloperName>
    <label>DurationDayGasC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>