force-app/main/default/objects/SalesforceAsset__x/fields/Index1PUNC__c.field-meta.xml
<CustomField>
    <fullName>Index1PUNC__c</fullName>
    <description>Index1PUNC</description>
    <externalDeveloperName>Index1PUNC</externalDeveloperName>
    <label>Index1PUNC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>