force-app/main/default/objects/SalesforceAsset__x/fields/LoginGroupC__c.field-meta.xml
<CustomField>
    <fullName>LoginGroupC__c</fullName>
    <description>LoginGroupC</description>
    <externalDeveloperName>LoginGroupC</externalDeveloperName>
    <label>Raggruppamento Login</label>
    <length>70</length>
    <type>Text</type>
</CustomField>