force-app/main/default/objects/SalesforceAsset__x/fields/NewClientC__c.field-meta.xml
<CustomField>
    <fullName>NewClientC__c</fullName>
    <description>NewClientC</description>
    <externalDeveloperName>NewClientC</externalDeveloperName>
    <label>NewClientC</label>
    <length>1</length>
    <type>Text</type>
</CustomField>