force-app/main/default/objects/SalesforceAsset__x/fields/PDRCodeC__c.field-meta.xml
<CustomField>
    <fullName>PDRCodeC__c</fullName>
    <description>PDRCodeC</description>
    <externalDeveloperName>PDRCodeC</externalDeveloperName>
    <label>Codice PDR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>