force-app/main/default/objects/SalesforceAsset__x/fields/PriceGreenOptionC__c.field-meta.xml
<CustomField>
    <fullName>PriceGreenOptionC__c</fullName>
    <description>PriceGreenOptionC</description>
    <externalDeveloperName>PriceGreenOptionC</externalDeveloperName>
    <label>PriceGreenOptionC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>