force-app/main/default/objects/SalesforceAsset__x/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <description>ProductCode</description>
    <externalDeveloperName>ProductCode</externalDeveloperName>
    <label>ProductCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>