force-app/main/default/objects/SalesforceAsset__x/fields/QuoteC__c.field-meta.xml
<CustomField>
    <fullName>QuoteC__c</fullName>
    <description>QuoteC</description>
    <externalDeveloperName>QuoteC</externalDeveloperName>
    <label>Quota</label>
    <length>255</length>
    <type>Text</type>
</CustomField>