force-app/main/default/objects/SalesforceAsset__x/fields/ReadingC__c.field-meta.xml
<CustomField>
    <fullName>ReadingC__c</fullName>
    <description>ReadingC</description>
    <externalDeveloperName>ReadingC</externalDeveloperName>
    <label>Lettura</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>