force-app/main/default/objects/SalesforceAsset__x/fields/RootAssetId__c.field-meta.xml
<CustomField>
    <fullName>RootAssetId__c</fullName>
    <description>RootAssetId</description>
    <externalDeveloperName>RootAssetId</externalDeveloperName>
    <label>RootAssetId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>