force-app/main/default/objects/SalesforceAsset__x/fields/SBQQ_BundleC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_BundleC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SBQQ_BundleC</description>
    <externalDeveloperName>SBQQ_BundleC</externalDeveloperName>
    <label>SBQQ_BundleC</label>
    <type>Checkbox</type>
</CustomField>