force-app/main/default/objects/SalesforceAsset__x/fields/SBQQ_CreditProductIdC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_CreditProductIdC__c</fullName>
    <description>SBQQ_CreditProductIdC</description>
    <externalDeveloperName>SBQQ_CreditProductIdC</externalDeveloperName>
    <label>SBQQ_CreditProductIdC</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>