force-app/main/default/objects/SalesforceAsset__x/fields/SBQQ_DiscountScheduleC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_DiscountScheduleC__c</fullName>
    <description>SBQQ_DiscountScheduleC</description>
    <externalDeveloperName>SBQQ_DiscountScheduleC</externalDeveloperName>
    <label>Programma Sconto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>