force-app/main/default/objects/SalesforceAsset__x/fields/SBQQ_DiscountScheduleTypeC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_DiscountScheduleTypeC__c</fullName>
    <description>SBQQ_DiscountScheduleTypeC</description>
    <externalDeveloperName>SBQQ_DiscountScheduleTypeC</externalDeveloperName>
    <label>Tipo Programma Sconto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>