force-app/main/default/objects/SalesforceAsset__x/fields/SBQQ_LatestQuoteLineC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_LatestQuoteLineC__c</fullName>
    <description>SBQQ_LatestQuoteLineC</description>
    <externalDeveloperName>SBQQ_LatestQuoteLineC</externalDeveloperName>
    <label>Ultima Quote Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>