force-app/main/default/objects/SalesforceAsset__x/fields/SBQQ_NumberC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_NumberC__c</fullName>
    <description>SBQQ_NumberC</description>
    <externalDeveloperName>SBQQ_NumberC</externalDeveloperName>
    <label>Numero</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>