force-app/main/default/objects/SalesforceAsset__x/fields/SBQQ_OptionLevelC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_OptionLevelC__c</fullName>
    <description>SBQQ_OptionLevelC</description>
    <externalDeveloperName>SBQQ_OptionLevelC</externalDeveloperName>
    <label>SBQQ_OptionLevelC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>