force-app/main/default/objects/SalesforceAsset__x/fields/SBQQ_ProductOptionC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_ProductOptionC__c</fullName>
    <description>SBQQ_ProductOptionC</description>
    <externalDeveloperName>SBQQ_ProductOptionC</externalDeveloperName>
    <label>SBQQ_ProductOptionC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>