force-app/main/default/objects/SalesforceAsset__x/fields/SBQQ_RenewalUpliftRateC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_RenewalUpliftRateC__c</fullName>
    <description>SBQQ_RenewalUpliftRateC</description>
    <externalDeveloperName>SBQQ_RenewalUpliftRateC</externalDeveloperName>
    <label>SBQQ_RenewalUpliftRateC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>