force-app/main/default/objects/SalesforceAsset__x/fields/SBQQ_RequiredBySubscriptionC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_RequiredBySubscriptionC__c</fullName>
    <description>SBQQ_RequiredBySubscriptionC</description>
    <externalDeveloperName>SBQQ_RequiredBySubscriptionC</externalDeveloperName>
    <label>Richiesto da Sottoscrizione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>