force-app/main/default/objects/SalesforceAsset__x/fields/SBQQ_RootAssetC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_RootAssetC__c</fullName>
    <description>SBQQ_RootAssetC</description>
    <externalDeveloperName>SBQQ_RootAssetC</externalDeveloperName>
    <label>SBQQ_RootAssetC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>