force-app/main/default/objects/SalesforceAsset__x/fields/SBQQ_RootIdC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_RootIdC__c</fullName>
    <description>SBQQ_RootIdC</description>
    <externalDeveloperName>SBQQ_RootIdC</externalDeveloperName>
    <label>SBQQ_RootIdC</label>
    <length>18</length>
    <type>Text</type>
</CustomField>