force-app/main/default/objects/SalesforceAsset__x/fields/SBQQ_SubscriptionEndDateC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_SubscriptionEndDateC__c</fullName>
    <description>SBQQ_SubscriptionEndDateC</description>
    <externalDeveloperName>SBQQ_SubscriptionEndDateC</externalDeveloperName>
    <label>Fine Data Sottoscrizione</label>
    <type>DateTime</type>
</CustomField>