force-app/main/default/objects/SalesforceAsset__x/fields/SBQQ_SubscriptionQuoteLineC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_SubscriptionQuoteLineC__c</fullName>
    <description>SBQQ_SubscriptionQuoteLineC</description>
    <externalDeveloperName>SBQQ_SubscriptionQuoteLineC</externalDeveloperName>
    <label>SBQQ_SubscriptionQuoteLineC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>