force-app/main/default/objects/SalesforceAsset__x/fields/SBQQ_SubscriptionStartDateC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_SubscriptionStartDateC__c</fullName>
    <description>SBQQ_SubscriptionStartDateC</description>
    <externalDeveloperName>SBQQ_SubscriptionStartDateC</externalDeveloperName>
    <label>Inizio Data Sottoscrizione</label>
    <type>DateTime</type>
</CustomField>