force-app/main/default/objects/SalesforceAsset__x/fields/SupplyCityC__c.field-meta.xml
<CustomField>
    <fullName>SupplyCityC__c</fullName>
    <description>SupplyCityC</description>
    <externalDeveloperName>SupplyCityC</externalDeveloperName>
    <label>Comune Fornitura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>