force-app/main/default/objects/SalesforceAsset__x/fields/SupplyZipCodeC__c.field-meta.xml
<CustomField>
    <fullName>SupplyZipCodeC__c</fullName>
    <description>SupplyZipCodeC</description>
    <externalDeveloperName>SupplyZipCodeC</externalDeveloperName>
    <label>SupplyZipCodeC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>