force-app/main/default/objects/SalesforceAsset__x/fields/VasCommunicationDateC__c.field-meta.xml
<CustomField>
    <fullName>VasCommunicationDateC__c</fullName>
    <description>VasCommunicationDateC</description>
    <externalDeveloperName>VasCommunicationDateC</externalDeveloperName>
    <label>Data comunicazione</label>
    <type>DateTime</type>
</CustomField>