force-app/main/default/objects/SalesforceAsset__x/fields/VasCommunicationProgressiveC__c.field-meta.xml
<CustomField>
    <fullName>VasCommunicationProgressiveC__c</fullName>
    <description>VasCommunicationProgressiveC</description>
    <externalDeveloperName>VasCommunicationProgressiveC</externalDeveloperName>
    <label>VasCommunicationProgressiveC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>