force-app/main/default/objects/SalesforceAsset__x/fields/VasPracticeCodeC__c.field-meta.xml
<CustomField>
    <fullName>VasPracticeCodeC__c</fullName>
    <description>VasPracticeCodeC</description>
    <externalDeveloperName>VasPracticeCodeC</externalDeveloperName>
    <label>VasPracticeCodeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>