force-app/main/default/objects/SalesforceAsset__x/fields/VasReturnedProductDateC__c.field-meta.xml
<CustomField>
    <fullName>VasReturnedProductDateC__c</fullName>
    <description>VasReturnedProductDateC</description>
    <externalDeveloperName>VasReturnedProductDateC</externalDeveloperName>
    <label>Data reso prodotto </label>
    <type>DateTime</type>
</CustomField>