force-app/main/default/objects/SalesforceAsset__x/fields/VasSupplierC__c.field-meta.xml
<CustomField>
    <fullName>VasSupplierC__c</fullName>
    <description>VasSupplierC</description>
    <externalDeveloperName>VasSupplierC</externalDeveloperName>
    <label>VasSupplierC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>