force-app/main/default/objects/SalesforceAsset__x/fields/VersionC__c.field-meta.xml
<CustomField>
    <fullName>VersionC__c</fullName>
    <description>VersionC</description>
    <externalDeveloperName>VersionC</externalDeveloperName>
    <label>VersionC</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>